# Turtlebot_Roomba

./: CMakeLists.txt  LICENSE  README.md  package.xml
launch/: nodes.launch  turtlebot.launch  world.launch
result/: cppcheck_results.txt  cpplint_results.txt
src/: move_node.cpp  rotate_node.cpp
urdf/: turtlebot_gazebo.urdf
worlds/: roomba_world.world
